--- a/SignalRAssignment/appsettings.json
+++ b/SignalRAssignment/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PizzaStore": "Server=LAPTOP-J5VC9F8S\\DUNGVNTSQLSERVER;Uid=sa;Pwd=123456;Database=PizzaStore;Trusted_Connection=True; Encrypt=False;MultipleActiveResultSets=true"
+    //"PizzaStore": "Server=LAPTOP-J5VC9F8S\\DUNGVNTSQLSERVER;Uid=sa;Pwd=123456;Database=PizzaStore;Trusted_Connection=True; Encrypt=False;MultipleActiveResultSets=true"
+    "PizzaStore": "Server=LAPTOP-9COIMEED;Uid=sa;Pwd=12345;Database=PizzaStore;Trusted_Connection=True; Encrypt=False;MultipleActiveResultSets=true" //Thang
   }
 }
